Certificate section was designed in half an hour. Have no time

--- a/assets/src/components/main/discounts/discounts.html
+++ b/assets/src/components/main/discounts/discounts.html
@@ -1,4 +1,4 @@
-<nav class="discounts page__discounts">
+<section class="discounts page__discounts">
   <h2 class="discounts__heading">Акции и скидки</h2>
   <div class="discounts__wrp container">
     <div class="swiper navSwiper">
@@ -56,4 +56,4 @@
     </div>
     
   </div>
-</nav>
+</section>
