--- a/assets/src/style/main.scss
+++ b/assets/src/style/main.scss
@@ -19,6 +19,7 @@
 @import "../components/main/discounts/discounts";
 @import "../components/main/brands/brands";
 @import "../components/main/catalog/catalog";
+@import "../components/main/certs/certs";
 
 // <main>
 
