Catalog section items align fixed

--- a/assets/src/style/main.scss
+++ b/assets/src/style/main.scss
@@ -20,6 +20,7 @@
 @import "../components/main/brands/brands";
 @import "../components/main/catalog/catalog";
 @import "../components/main/certs/certs";
+@import "../components/main/contacts/contacts";
 
 // <main>
 
