--- a/assets/src/components/main/certs/certs.html
+++ b/assets/src/components/main/certs/certs.html
@@ -1,5 +1,5 @@
 <section class="certs page__certs">
-  <h2 class="certs__heading">Cертификаты</h2>
+  <h2 class="certs__heading container">Cертификаты</h2>
   <div class="certs__wrp container">
     <div class="swiper certsSwiper">
       <div class="swiper-wrapper">
