--- a/assets/src/components/main/discounts/discounts.html
+++ b/assets/src/components/main/discounts/discounts.html
@@ -1,5 +1,5 @@
 <section class="discounts page__discounts">
-  <h2 class="discounts__heading">Акции и скидки</h2>
+  <h2 class="discounts__heading container">Акции и скидки</h2>
   <div class="discounts__wrp container">
     <div class="swiper navSwiper">
       <div class="swiper-wrapper">
