--- a/assets/src/components/main/first-screen/_first-screen.scss
+++ b/assets/src/components/main/first-screen/_first-screen.scss
@@ -52,8 +52,8 @@
       &::before {
         content: "";
         position: absolute;
-        top: -30px;
-        left: 8px;
+        top: -31px;
+        left: 9px;
         display: block;
         width: 20px;
         height: 20px;
@@ -91,6 +91,7 @@
       top: 0;
       bottom: 0;
       margin: 0;
+      border-radius: 20px;
     }
   }
 }
