--- a/assets/src/components/main/topbar/topbar.html
+++ b/assets/src/components/main/topbar/topbar.html
@@ -1,32 +1,14 @@
-<!-- <header id="header" class="header">
-  <div class="topbar header__topbar">
-    <div class="topbar__top">
-      <div class="container">
-        <div class="topbar__top-inner">
-          <p class="topbar__top-adress">
-            г. Москва, Красная площадь, д.1
-          </p>
-          <div class="topbar__top-rights">
-            <p class="topbar__top-worktime">Пн-Вс 8:00-20:00</p>
-            <a class="topbar__top-tel" target="_blank" href="tel:+74991234567">+7 (499) 123-45-67</a>
-          </div>
-        </div>
-      </div>
-    </div>    
-  </div>
-</header> -->
-
 <header class="header">
   <div class="topbar">
     <div class="topbar__top">
       <div class="container">
-        <div class="topbar__top-inner">
+        <div class="topbar__inner">
           
-          <a href="/" class="topbar__top-logo-link">
+          <a href="/" class="topbar__logo-link">
             <img
               src="/img/topbar/logo.svg"
               alt=""
-              class="topbar__top-logo-img"
+              class="topbar__logo-img"
             />
           </a>
 
@@ -39,29 +21,50 @@
             <span>Москва</span>
           </a>
 
-          <nav class="topbar__top-rights">
-            <ul class="topbar__top-links">
-              <li class="topbar__top-li">
-                <a href="#" class="topbar__top-link">О нас</a>
+          <nav class="topbar__rights">
+            <ul class="topbar__links">
+              <li class="topbar__li">
+                <a href="#" class="topbar__link">О нас</a>
               </li>
-              <li class="topbar__top-li">
-                <a href="#" class="topbar__top-link">Проектирование</a>
+              <li class="topbar__li">
+                <a href="#" class="topbar__link">Проектирование</a>
               </li>
-              <li class="topbar__top-li">
-                <a href="#" class="topbar__top-link">Лизинг</a>
+              <li class="topbar__li">
+                <a href="#" class="topbar__link">Лизинг</a>
               </li>
-              <li class="topbar__top-li">
-                <a href="#" class="topbar__top-link">Гарантия</a>
+              <li class="topbar__li">
+                <a href="#" class="topbar__link">Гарантия</a>
               </li>
-              <li class="topbar__top-li">
-                <a href="#" class="topbar__top-link">Контакты</a>
+              <li class="topbar__li">
+                <a href="#" class="topbar__link">Контакты</a>
               </li>
             </ul>
             <div class="topbar__comm">
               <a href="#" class="topbar__whatsapp-link"><img class="topbar__whatsapp-img" alt="" src="/img/topbar/whatsapp-green.svg"></a>                        
               <a href="#" class="topbar__tel">8 800 123-45-67</a>
             </div>
+
+            <div class="topbar__catlog">
+              <a href="#catalog" class="topbar__catalog-wrp-link">
+                <img src="/img/topbar/dots-grid.svg" alt="" class="topbar__catalog-dots">
+                <p class="topbar__catalog-text">Каталог</p>
+              </a>
+  
+              <div class="topbar__search-wrp">
+                <input type="text" class="topbar__search-input"></input>
+                <button class="topbar__search-btn"></button>
+              </div>
+  
+              <a href="" class="topbar__cart-wrp-link">
+                <span class="topbar__cart-number">0</span>
+              </a>
+              <a href="" class="topbar__heart-wrp-link">
+                <span class="topbar__heart-number">0</span>
+              </a>
+  
+            </div>
           </nav>
+
           <div class="topbar__hamburger-wrapper">
             <div class="topbar__hamburger"></div>
           </div>
