--- a/assets/src/components/main/catalog/catalog.html
+++ b/assets/src/components/main/catalog/catalog.html
@@ -1,4 +1,4 @@
-<section class="catalog">
+<section id="catalog" class="catalog">
   <div class="catalog__wrp container">
       <h2 class="catalog__heading">
           Каталог
