--- a/assets/src/components/main/topbar/topbar.scss
+++ b/assets/src/components/main/topbar/topbar.scss
@@ -1,6 +1,8 @@
 // X-Small devices (portrait phones, less than 576px)
 // No media query for `xs` since this is the default
-.header {  
+.header {
+  position: fixed;
+  z-index: 9999;
   width: 100%;
   height: auto;
   margin-top: 0;
@@ -8,7 +10,6 @@
 
 .topbar {
   position: relative;
-  z-index: 9999;
   background: #fff;
   // transition: all 0.15s ease-in-out;
 
@@ -31,53 +32,53 @@
       text-decoration: none;
     }
   }
-  &__top-inner {
+  &__inner {
     // position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
   }
-  &__top-logo-link {
+  &__logo-link {
     display: flex;
     align-items: center;
   }
   &__map-link {
     display: none;
   }
-  &__top-logo-img {
+  &__logo-img {
     width: 180px;
     height: auto;
     padding-right: 5px;
   }
-  &__top-rights {
+  &__rights {
     position: absolute;
     z-index: 9999;
     top: 49px;
-    left: -100%;
+    right: -100%;
     // display: flex;
     // flex-direction: column;
     width: 100%;
-    padding: 25px 0;
+    padding: 25px 0 90px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     background: #fff;
-    transition: left .2s ease-in-out;
+    transition: all .2s ease-in-out;
 
     &--active {
-      left: 0;
+      right: 0;
     }
   }
-  &__top-links {
+  &__links {
     display: flex;
     flex-direction: column;
     align-items: center;
     list-style: none;
     list-style-position: inside;
   }
-  &__top-li {
+  &__li {
     padding: 10px 0;
   }
-  &__top-link {
+  &__link {
     text-transform: uppercase;
   }
   
@@ -96,6 +97,100 @@
   &__tel {
     font-weight: 900;
   }
+
+  &__catlog {
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 0 15px;
+  }
+
+  &__catalog-wrp-link {
+    display: flex;
+    align-items: center;
+    background: #f1c012;
+    padding: 8px 8px;
+    border-radius: 6px;
+  }
+  &__catalog-dots {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+  }
+  &__catalog-text {
+    font-size: 12px;
+    text-transform: uppercase;
+  }
+
+  &__search-wrp {
+    position: relative;
+    flex: 1 0 10%;
+    margin-left: 2%;
+  }
+  &__search-input {
+    width: 100%;
+    padding: 6px 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+  }
+  &__search-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 12px;
+    width: 20px;
+    height: 20px;
+    border: 0;
+    outline: none;
+    background: url(/img/topbar/search-icon.svg) no-repeat;
+    cursor: pointer;
+  }
+
+  &__cart-wrp-link {
+    position: relative;
+    margin-left: 8%;
+    width: 24px;
+    height: 24px;
+    background: url(/img/topbar/cart-mini-black.svg) no-repeat;
+    background-size: cover;
+  }
+  &__cart-number {
+    position: absolute;
+    right: -4px;
+    bottom: -4px;
+    padding: 1px 4px;
+    font-size: 12px;
+    font-weight: 900;
+    color: #000;
+    border-radius: 50%;
+    background: #f1c012;
+  }
+
+  &__heart-wrp-link {
+    position: relative;
+    margin-left: 2%;
+    margin-right: 1%;
+    width: 24px;
+    height: 22px;
+    background: url(/img/topbar/heart-black.svg) no-repeat;
+    background-size: cover;
+  }
+  &__heart-number {
+    position: absolute;
+    right: -4px;
+    bottom: -4px;
+    padding: 1px 4px;
+    font-size: 12px;
+    font-weight: 900;
+    color: #000;
+    border-radius: 50%;
+    background: #f1c012;
+  }
+
 
   &__hamburger-wrapper {
     display: none;
@@ -175,13 +270,14 @@
   }
 }
 
-body.scrolled .topbar__top-consult {
-  opacity: 1;
-}
+// body.scrolled .topbar__consult {
+//   opacity: 1;
+// }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .header {
+    position: sticky;
     height: 51px;
   }
   .topbar {
@@ -192,13 +288,13 @@ body.scrolled .topbar__top-consult {
       height: inherit;
       border-bottom: 1px solid transparent;
     }
-    &__top-inner {
+    &__inner {
       // position: relative;
       height: inherit;
       align-items: center;
     }
 
-    &__top-logo-link {
+    &__logo-link {
       position: absolute;
       left: 20px;
       top: 35px;
@@ -229,7 +325,7 @@ body.scrolled .topbar__top-consult {
       }
 
     }
-    &__top-logo-img {
+    &__logo-img {
       width: 247px;
       height: auto;
     }
@@ -258,7 +354,7 @@ body.scrolled .topbar__top-consult {
       padding: 5px 0;
       text-decoration: none;
     }
-    &__top-rights {
+    &__rights {
       position: static;
       display: flex;
       width: unset;
@@ -267,15 +363,15 @@ body.scrolled .topbar__top-consult {
       background: transparent;
       transition: all 0.3s ease-in-out;
     }
-    &__top-links {
+    &__links {
       display: flex;
       flex-direction: row;
     }
-    &__top-li {
+    &__li {
       margin-left: 25px;
       padding: 0;
     }
-    &__top-link {
+    &__link {
       font-size: 14px;
       padding: 5px 0;
       border-bottom: 2px solid transparent;
@@ -313,6 +409,62 @@ body.scrolled .topbar__top-consult {
         border-bottom: 2px solid rgba(241, 192, 18, .6);
       }
     }
+
+    &__catlog {
+      top: 58px;
+      bottom: unset;
+      right: 20px;
+      justify-content: flex-end;      
+      width: 62%;
+      padding: 0;
+    }
+    &__catalog-wrp-link {
+      padding: 8px 14px;
+      transition: all .25s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    &__search-wrp {
+      position: relative;
+      margin-left: 4.5%;
+    }
+    &__search-input {
+      border: 0;
+      outline: none;
+    }
+    &__search-btn {
+      transition: all .2s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+        background: url(/img/topbar/search-icon-hover.svg) no-repeat;
+      }
+    }
+
+    &__cart-wrp-link {
+      margin-left: 12%;      
+      background: url(/img/topbar/cart-mini.svg) no-repeat;
+      transition: all .2s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+
+    &__heart-wrp-link {
+      margin-left: 22px;
+      margin-right: 22px;
+      background: url(/img/topbar/heart.svg) no-repeat;
+      transition: all .2s ease-in-out;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+    
 
     &__hamburger-wrapper {
       display: none;
