--- a/assets/src/style/_common.scss
+++ b/assets/src/style/_common.scss
@@ -1,5 +1,4 @@
 $text_color: #202020;
-// $color_main_brand: #e58e26;
 $color_main_brand: #f1c012;
 
 @font-face {
@@ -23,17 +22,15 @@ $color_main_brand: #f1c012;
 }
 
 @font-face {
-  font-family: 'Gilroy';
-  src: url('Gilroy-Bold.eot');
+  font-family: 'Gilroy Bold';
+  src: url('/fonts/Gilroy/Gilroy-Bold.eot');
   src: local('Gilroy Bold'), local('Gilroy-Bold'),
-      url('Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
-      url('Gilroy-Bold.woff') format('woff'),
-      url('Gilroy-Bold.ttf') format('truetype');
+      url('/fonts/Gilroy/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/Gilroy/Gilroy-Bold.woff') format('woff'),
+      url('/fonts/Gilroy/Gilroy-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
-
-
 
 @font-face {
   font-family: 'Avenir Next Cyr';
@@ -63,9 +60,6 @@ $color_main_brand: #f1c012;
 }
 
 html {
-  font-family: 'Gilroy', "Calibri", "Arial", sans-serif;
-  font-size: 100%;
-  color: $text_color;
   scroll-behavior: smooth;
   overflow: auto;
 }
